# tic-tac-toe-ml-rust

./: .gitignore  Cargo.toml
src/: .main.rs.rustfmt  main.rs
src/engine/: game.rs  ml.rs  mod.rs
ui/: appwindow.slint
