[package]
name = "slint-gui"
version = "0.1.0"
authors = ["mmRoshani <mohammadmojtabaroshani@outlook.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5.1"
image = "0.25.1"

[build-dependencies]
slint-build = "1.5.1"
